Fixed spacing between the word and the top of the crafting table

--- a/src/components/RecipeComponent.css
+++ b/src/components/RecipeComponent.css
@@ -37,8 +37,7 @@
   height: var(--crafting-table-result-width-height);
 }
 #crafting-lbl{
-  font-size: 1.7em;
-  font-family: 'Roboto Remix', sans-serif;
+  
 }
 .crafting-area{
   display: flex;
